Fix wrong fontsize in example code

--- a/packages/project-nitro-twig/src/patterns/molecules/example/css/example.scss
+++ b/packages/project-nitro-twig/src/patterns/molecules/example/css/example.scss
@@ -3,7 +3,7 @@
 	background: darken($gray, 15%);
 }
 .m-example__headline {
-	font-size: .7em;
+	font-size: 1.6em;
 	color: #fff;
 }
 .m-example__link {
